--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "knplabs/knp-paginator-bundle": "^5.9",
         "nelmio/api-doc-bundle": "^4.11",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/apache-pack": "^1.0",
