--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/dotenv": "5.4.*",
         "symfony/event-dispatcher": "5.4.*",
         "symfony/expression-language": "5.4.*",
+        "symfony/finder": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.*",
         "symfony/framework-bundle": "5.4.*",
