--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,5 +1,13 @@
 nelmio_api_doc:
     documentation:
+        components:
+                securitySchemes:
+                    Bearer:
+                        type: http
+                        scheme: bearer
+                        bearerFormat: JWT
+        security:
+            - bearer: []
         servers:
           - url: http://localhost:8000
             description: API on localhost
