--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,8 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            custom_authenticators:
+                - App\Security\ApiKeyAuthenticator
             lazy: true
             provider: app_user_provider
             json_login:
@@ -31,6 +33,10 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+          - { path: ^/api/doc, roles: PUBLIC_ACCESS }
+          - { path: ^/api/doc.json, roles: PUBLIC_ACCESS }
+          - { path: ^/caracter/, roles: ROLE_USER }
+          - { path: ^/, roles: ROLE_USER }
 
 when@test:
     security:
