--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
         "knplabs/knp-paginator-bundle": "^5.9",
+        "lcobucci/jwt": "^4.0",
         "nelmio/api-doc-bundle": "^4.11",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/apache-pack": "^1.0",
